--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -6,3 +6,8 @@ sky:
     database: sky_take_out
     username: root
     password: Hjw1829669
+  alioss:
+    endpoint: oss-cn-hangzhou.aliyuncs.com
+    access-key-id: LTAI5tBVV4MYmzFFDzvT5NKU
+    access-key-secret: YHUPVBvdJk9Egr2GoM0sj8dk0XPsL9
+    bucket-name: sky-take-out-ttk
